--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "phpmailer/phpmailer": "^6.1",
-        "twilio/sdk": "^6.8"
+        "twilio/sdk": "^6.8",
+        "mpdf/mpdf": "^8.0"
     }
 }
